# bmstu-5sem-tests_software-v1

./: .gitignore  1.test.cpp  2.test.cpp  CMakeLists.txt  CMakeUserPresets.json  load.sh  readme.md
include/: 1.factory.h  1.integral_v1.h  1.integral_v2.h
src/: 1.integral.cpp
